[package]
name = "price_sniffer"
version = "0.2.0"
authors = ["ludovic"]

[dependencies]
reqwest = "0.9"
lettre = "0.8"
lettre_email = "0.8"
log = { version = "0.4.1", features = ["std"] }
postgres = "0.15"
regex = "1"
yaml-rust = "0.4"
rust_decimal = { version = "0.10", features = ["postgres"] }
simplelog = "^0.5.0"
